# World-Sim

./: Cargo.toml  README.md
src/: event.rs  id.rs  lib.rs  main.rs  objects.rs  traits.rs
src/country/: mod.rs  sim.rs  untracked_new.rs
src/person/: mod.rs
